# linux-lx-dos

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  TODO.md  build.rs  data  error  main.cpp  qemu-man  qemu-opts
.devcontainer/: devcontainer.json
lib/gui/: Cargo.toml
lib/gui/lib/qt6-bind/src/headers/: enums.hpp  events.hpp  qt_app_api.hpp  qt_element_api.hpp  types.hpp
lib/gui/lib/qt6-bind/src/modules/: qt-app.hpp  qt-element.hpp  qt-tray.cpp  qt-window.cpp
lib/gui/src/: app.rs  bind.rs  gui_lib.rs  lib.rs
lib/gui/src/app/: event.rs  instance.rs  notification.rs  tray.rs  window.rs
lib/gui/src/app/event/: window.rs
lib/gui/src/app/instance/: app.rs  element.rs  tray.rs  window.rs
lib/gui/src/app/window/: builder.rs  element.rs
lib/gui/src/gui_lib/: qt6.rs
lib/gui/src/gui_lib/qt6/: bind.rs
lib/qemu-system/: Cargo.toml
lib/qemu-system/src/: vm.rs
lib/qemu-system/src/vm/: device.rs
lib/qemu-system/src/vm/configure/: memory.rs
lib/qemu-system/src/vm/device/: audio.rs  keyboard.rs  mouse.rs  usb.rs  video.rs
lib/qt-lx-dos/: CMakeLists.txt  c_api.cpp
lib/qt-lx-dos/api/: qt-lx-dos.cpp  qt-lx-dos.hpp
lib/qt-lx-dos/src/: tray.qrc
lib/qt-lx-dos/ui/main/: main.cpp  main.hpp  main.ui  window.cpp  window.hpp  window.ui
lib/qt-lx-dos/ui/settings/: settings.cpp  settings.ui
lib/qt-lx-dos/ui/task/: tray.cpp  tray.hpp
lib/qt-lx-dos/ui/welcome/: welcome.cpp  welcome.hpp  welcome.md  welcome.ui
lib/qt-tray/: .clang-format  CMakeLists.txt  README.md
lib/qt-tray/src/: lib.cpp  lib.hpp
lib/qt-tray/src/modules/: tray.cpp  tray.hpp
lib/qt6/: Cargo.toml  TODO.md
lib/qt6-bind/: CMakeLists.txt  qt6.rs
lib/qt6-bind/src/: lib.hpp  main.cpp
lib/qt6-bind/src/modules/: qt-app.cpp  qt-app.hpp  qt-core.cpp  qt-core.hpp  qt-element.cpp  qt-tray.cpp  qt-tray.hpp  qt-widget.cpp  qt-widget.hpp  qt-window.cpp  qt-window.hpp
lib/qt6-bind/src/tests/: test-qt-widget.cpp
lib/qt6/lib/qt6-bind/src/: bindgen_api.hpp  lib.hpp  qt-thread-executor.cpp  qt-thread-executor.hpp
lib/qt6/lib/qt6-bind/src/headers/: qt_window_api.hpp
lib/qt6/lib/qt6-bind/src/modules/: qt-element.cpp  qt-element.hpp  qt-window.hpp
lib/qt6/src/: app.rs  bind.rs  element.rs  lib.rs  tray.rs  window.rs
lib/system-tray/: Cargo.toml  TODO.md  build.rs
lib/system-tray/lib/: CMakeLists.txt
lib/system-tray/lib/src/: lib.cpp  lib.hpp  main.cpp
lib/system-tray/lib/src/modules/: qt-tray.cpp
lib/system-tray/src/: error.rs  lib.rs  main.rs  qt6.rs
lib/virtual-machine/: Cargo.toml
lib/virtual-machine/src/: vm.rs
lib/virtual-machine/src/vm/: configure.rs  device.rs
lib/virtual-machine/src/vm/configure/: cpu.rs  memory.rs
lib/virtual-machine/src/vm/device/: audio.rs  drive.rs  graphics.rs  keyboard.rs  mouse.rs  usb.rs  video.rs
resources/: resources.qrc
rust_backend/: Cargo.toml
rust_backend/src/: error.rs  lib.rs  qemu.rs
rust_backend/src/qemu/: config.rs  devices.rs
rust_backend/src/qemu/devices/: audio.rs  bios_uefi.rs  drive.rs  hard_disk.rs  ide.rs  input.rs  usb.rs
rust_backend/src/qemu/devices/boot/: bios.rs
rust_backend/src/qemu/devices/drive/: hard_disk.rs
scripts/: build.sh
src/: command.rs  cxx_qt_object.rs  lib.rs  main.cpp  main.rs  modules.rs  qt6.rs  utils.rs
src/command/: backend.rs  run.rs  start.rs  stop.rs  welcome.rs
src/command/backend/: window.rs
src/modules/: app.rs  lx_dos.rs  vm.rs
src/modules/app/: gui.rs  instance.rs  messages.rs  run.rs
src/modules/lx_dos/: vm.rs
src/modules/lx_dos/vm/: configure.rs  device.rs
src/modules/lx_dos/vm/configure/: cpu.rs  memory.rs
src/modules/lx_dos/vm/device/: audio.rs  drive.rs  graphics.rs  keyboard.rs  mouse.rs  usb.rs  video.rs
src/utils/: args.rs  error.rs
ui/: mainwindow.cpp  mainwindow.ui  welcomedialog.cpp  welcomedialog.ui
ui/main/: window.cpp  window.hpp
ui/welcome/: dialog.cpp  dialog.hpp
