[package]
name = "linux-lx-dos"
version = "0.1.0"
edition = "2024"
[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"
system-tray.path = "lib/system-tray"
instance-pipe.path = "lib/instance-pipe"
async-channel = "2.5.0"
gui = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
